# lara-marketing-connector

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  auth.py  config_store.py  db.py  pyproject.toml  requirements.txt  server.py  session.py  skills_repo.py
.claude/skills/openai-apps-sdk/: SKILL.md
.claude/skills/openai-apps-sdk/references/: auth-deploy-security.md  mcp-server.md  widgets-ui.md
.github/workflows/: deploy.yml
specs/: 00-overview.md  01-architecture.md  02-data-model.md  03-session-contract.md  04-tools.md  05-tiers.md  06-auth.md
tests/: test_full.py  test_http.py  test_live_app.py  test_smoke.py
web/: lara-widget.html
